force-app/main/default/objects/XactlyExpress__XCDealResult__c/XactlyExpress__XCDealResult__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>XCDealResult</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XCDealResult</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>