force-app/main/default/objects/XactlyExpress__XCDealResult__c/fields/XactlyExpress__Attainment__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Attainment__c</fullName>
    <label>Attainment</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>