force-app/main/default/objects/XactlyExpress__XCDealResult__c/fields/XactlyExpress__Commission__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Commission__c</fullName>
    <label>Commission</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>