force-app/main/default/objects/XactlyExpress__XCDealResult__c/fields/XactlyExpress__CreditDealResultID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__CreditDealResultID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CreditDealResultID</label>
    <referenceTo>XactlyExpress__XCCreditDealResult__c</referenceTo>
    <relationshipLabel>XCDealResult</relationshipLabel>
    <relationshipName>XCDealResult</relationshipName>
    <type>Lookup</type>
</CustomField>