force-app/main/default/objects/XactlyExpress__XCDealResult__c/fields/XactlyExpress__DealCredit__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__DealCredit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DealCredit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>