force-app/main/default/objects/XactlyExpress__XCDealResult__c/fields/XactlyExpress__HoldBalance__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__HoldBalance__c</fullName>
    <formula>XactlyExpress__HoldAmount__c - XactlyExpress__ReleaseAmount__c + XactlyExpress__BalanceAdjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HoldBalance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>