force-app/main/default/objects/XactlyExpress__XCDealResult__c/fields/XactlyExpress__MeasureResultID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__MeasureResultID__c</fullName>
    <label>MeasureResultID</label>
    <referenceTo>XactlyExpress__XCMeasureResult__c</referenceTo>
    <relationshipLabel>XCDealResult</relationshipLabel>
    <relationshipName>XCDealResult</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>