force-app/main/default/objects/XactlyExpress__XCDealResult__c/fields/XactlyExpress__PaymentQualifierID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PaymentQualifierID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PaymentQualifierID</label>
    <referenceTo>XactlyExpress__XCPaymentQualifier__c</referenceTo>
    <relationshipLabel>XCDealResult</relationshipLabel>
    <relationshipName>XCDealResult</relationshipName>
    <type>Lookup</type>
</CustomField>