force-app/main/default/objects/XactlyExpress__XCDealResult__c/fields/XactlyExpress__ReleaseAmount__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ReleaseAmount__c</fullName>
    <label>ReleaseAmount</label>
    <summarizedField>XactlyExpress__XCReleaseResult__c.XactlyExpress__TotalRelease__c</summarizedField>
    <summaryFilterItems>
        <field>XactlyExpress__XCReleaseResult__c.XactlyExpress__IsReleased__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>XactlyExpress__XCReleaseResult__c.XactlyExpress__DealResultID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>