force-app/main/default/objects/XactlyExpress__XCDealResult__c/fields/XactlyExpress__ReleaseRuleID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ReleaseRuleID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ReleaseRuleID</label>
    <referenceTo>XactlyExpress__XCReleaseRule__c</referenceTo>
    <relationshipLabel>XCDealResult</relationshipLabel>
    <relationshipName>XCDealResult</relationshipName>
    <type>Lookup</type>
</CustomField>