force-app/main/default/objects/XactlyExpress__XCDealResult__c/fields/XactlyExpress__XCPayPeriod__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__XCPayPeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XCPayPeriod</label>
    <referenceTo>XactlyExpress__XCPeriod__c</referenceTo>
    <relationshipLabel>XCDealResult (XCPayPeriod)</relationshipLabel>
    <relationshipName>XCDealResultPay</relationshipName>
    <type>Lookup</type>
</CustomField>