force-app/main/default/objects/XactlyExpress__XCDealResult__c/fields/XactlyExpress__XCPeriod__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__XCPeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>XCPeriod</label>
    <referenceTo>XactlyExpress__XCPeriod__c</referenceTo>
    <relationshipLabel>XCDealResult (XCPeriod)</relationshipLabel>
    <relationshipName>XCDealResult</relationshipName>
    <type>Lookup</type>
</CustomField>